// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders a component for DESKTOP 1`] = `
<StatusBadge
  data-role="todo-card-status-0"
  onClick={[MockFunction]}
  theme={[ThemeObject]}
>
  PENDING
</StatusBadge>
`;

exports[`Status renders a component for MOBILE 1`] = `
<StatusIcon
  data-role="todo-card-status-0"
  onClick={[MockFunction]}
  status="PENDING"
  theme={[ThemeObject]}
/>
`;
